--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -10,8 +10,10 @@ https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend
 
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
+
+    old: AIzaSyDOKJIwKCEwx06Db5n_tFcXv5gXNjREnJo
     -->
     <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
-        AIzaSyDOKJIwKCEwx06Db5n_tFcXv5gXNjREnJo
+        AIzaSyDXRZyAyuR88MKOxDjC63hyQRae5ueYzGU
     </string>
 </resources>
